--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,24 @@
 		"lint": "eslint"
 	},
 	"dependencies": {
+		"@lukemorales/query-key-factory": "^1.3.4",
+		"@tanstack/react-query": "^5.90.16",
+		"clsx": "^2.1.1",
 		"next": "16.1.1",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
-		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.5.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "16.1.1",
+		"js-cookie": "^3.0.5",
+		"openapi-fetch": "^0.15.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
