--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,5 @@ dependencies = [
     "drf-spectacular>=0.28.0",
     "langchain-groq>=0.3.8",
     "langchain-tavily>=0.2.16",
+    "celery>=5.6.2",
 ]
