--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint"
+		"lint": "eslint",
+		"check-types": "tsc -b --noEmit"
 	},
 	"dependencies": {
 		"@lukemorales/query-key-factory": "^1.3.4",
