--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,18 @@
 	},
 	"dependencies": {
 		"@lukemorales/query-key-factory": "^1.3.4",
+		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-select": "^2.2.6",
+		"@tanstack/react-form": "^1.28.0",
 		"@tanstack/react-query": "^5.90.16",
+		"@tanstack/zod-form-adapter": "^0.42.1",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.563.0",
 		"next": "16.1.1",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
-		"tailwind-merge": "^2.5.4"
+		"tailwind-merge": "^2.5.4",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@tailwindcss/postcss": "^4",
