DEMAS-0 add fixes for backend url

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,9 @@ services:
       dockerfile: dockerfile
       target: frontend-runner
     working_dir: /app/frontend
+    environment:
+      - BACKEND_API_URL=http://demas-django:8000
+      - NEXT_PUBLIC_BACKEND_API_URL=${NEXT_PUBLIC_BACKEND_API_URL:-http://localhost:8000}
     command: pnpm start --port 3001
     ports:
       - "3001:3001"
